[tool.black]
line-length = 120


[tool.poetry]
name = "aoc-23"
version = "0.1.0"
description = ""
authors = ["Per Fagrell <per.fagrell@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
black = "*"
click = "*"
pytest = "^7.4.3"
pytest-clarity = "^1.0.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
